compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__unknown_type.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 911
expression: "type Thing { Thing(unknown: x) }"
snapshot_kind: text
---
----- SOURCE CODE
type Thing { Thing(unknown: x) }

----- ERROR
error: Unknown type
  ┌─ /src/one/two.gleam:1:29
  │
1 │ type Thing { Thing(unknown: x) }
  │                             ^

The type `x` is not defined or imported in this module.
